tests/baselines/reference/importAttributes2(module=es2015).errors.txt
1.ts(1,22): error TS2856: Import attributes cannot be used with type-only imports or exports.
1.ts(2,28): error TS2856: Import attributes cannot be used with type-only imports or exports.
1.ts(3,21): error TS2856: Import attributes cannot be used with type-only imports or exports.
1.ts(4,27): error TS2856: Import attributes cannot be used with type-only imports or exports.
2.ts(1,28): error TS2856: Import attributes cannot be used with type-only imports or exports.
2.ts(2,38): error TS2856: Import attributes cannot be used with type-only imports or exports.


==== 0.ts (0 errors) ====
    export const a = 1;
    export const b = 2;
    
==== 1.ts (4 errors) ====
    export {} from './0' with { type: "json" }
                         ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes cannot be used with type-only imports or exports.
    export { a, b } from './0' with { type: "json" }
                               ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes cannot be used with type-only imports or exports.
    export * from './0' with { type: "json" }
                        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes cannot be used with type-only imports or exports.
    export * as ns from './0' with { type: "json" }
                              ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes cannot be used with type-only imports or exports.
    
==== 2.ts (2 errors) ====
    export { a, b } from './0' with {}
                               ~~~~~~~
!!! error TS2856: Import attributes cannot be used with type-only imports or exports.
    export { a as c, b as d } from './0' with { a: "a", b: "b", c: "c" }
                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes cannot be used with type-only imports or exports.
    